--- a/backend/package.json
+++ b/backend/package.json
@@ -4,5 +4,17 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "nodemon": "^3.0.3"
-  }
+  },
+  "name": "backend",
+  "version": "1.0.0",
+  "main": "app.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js",
+    "dev": "nodemon app.js"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
