--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "markdown-it": "^14.0.0",
     "nodemon": "^3.0.3"
   },
   "name": "backend",
