--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "markdown-it": "^14.0.0",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "sqlite3": "^5.1.7"
   },
   "name": "backend",
   "version": "1.0.0",
